--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -9,16 +9,20 @@
 \let\cleardoublepage\relax
 
 \chapter*{Abstract}
-Short summary of the contents in English\dots
+We summarize the characteristics of third and fourth generation nuclear
+reactors and examine in detail the corresponding nuclear fuels 
 
 
 \vfill
 
-\pdfbookmark[1]{Zusammenfassung}{Zusammenfassung}
-\chapter*{Zusammenfassung}
-Kurze Zusammenfassung des Inhaltes in deutscher Sprache\dots
+\pdfbookmark[1]{Riassunto}{Riassunto}
+\chapter*{Riassunto}
+Si ricapitolano le caratteristiche dei reattori di terza e quarta generazione
+e si esaminano in dettaglio le caratteristiche dei relativi combustibili nucleari
 
 
 \endgroup			
 
-\vfill
+\vfil\begin{quotation}
+
+\end{quotation}
