--- a/FrontBackmatter/Dedication.tex
+++ b/FrontBackmatter/Dedication.tex
@@ -17,6 +17,7 @@
 \medskip
 
 \begin{center}
-    Dedicated to the loving memory of Rudolf Miede. \\ \smallskip
-    1939\,--\,2005
+    Dedicato alla mia famiglia, per la pazienza e l'aiuto.
+    In particolare, dedicato a Guido Costabile, il grande, che tanto ha aspettato
+    e un po' anche il piccolo, che ne tragga ispirazione. \\ \smallskip
 \end{center}
