Razionalizzazione e riduzione della complessità. Qualche passo avanti nela stesura.

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,70 +1,139 @@
-@BOOK{sommerville:1992,
-    Address        = {Boston, MA, USA},
-    Author         = {Ian Sommerville},
-    Edition        = {4th},
-    Publisher      = {Addison-Wesley},
-    Title          = {{S}oftware {E}ngineering},
-    Year           = {1992}
-}
-
-@ARTICLE{knuth:1974,
-    Address        = {New York, NY, USA},
-    Author         = {Knuth, Donald E.},
-    Journal        = {Communications of the ACM},
-    Month          = {December },
-    Number         = {12},
-    Pages          = {667--673},
-    Publisher      = {ACM Press},
-    Title          = {{C}omputer {P}rogramming as an {A}rt},
-    Volume         = {17},
-    Year           = {1974}
-}
-
-@BOOK{bentley:1999,
-    Address        = {Boston, MA, USA},
-    Author         = {Jon Bentley},
-    Edition        = {2nd},
-    Publisher      = {Addison--Wesley},
-    Title          = {{P}rogramming {P}earls},
-    Year           = {1999}
-}
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
 
 
-@ARTICLE{knuth:1976,
-    Address        = {New York, NY, USA},
-    Author         = {Knuth, Donald E.},
-    Journal        = {SIGACT News},
-    Month          = {April/June},
-    Number         = {2},
-    Pages          = {18--24},
-    Publisher      = {ACM Press},
-    Title          = {{B}ig {O}micron and {B}ig {O}mega and {B}ig {T}heta},
-    Volume         = {8},
-    Year           = {1976}
-}
+%% Created for Michele Costabile at 2011-01-13 13:34:33 +0100 
 
-@BOOK{cormen:2001,
-    Address        = {Cambridge, MA, USA},
-    Author         = {Cormen, Thomas H. and Leiserson, Charles E. and Rivest, Ronald L. and Clifford Stein},
-    Edition        = {2nd},
-    Publisher      = {The MIT Press},
-    Title          = {{I}ntroduction to {A}lgorithms},
-    Year           = {2001}
-}
 
-@BOOK{dueck:trio,
-    Author         = {Gunter Dueck},
-    Note           = {\url{http://www.omnisophie.com}},
-    Publisher      = {Springer, Berlin},
-    Title          = {Dueck's Trilogie: Omnisophie -- Supramanie -- Topothesie},    
-    Year           = {2005},
-}
+%% Saved with string encoding Unicode (UTF-8) 
 
-@BOOK{bringhurst:2002,
-	Address        = {Point Roberts, WA, USA},
-	Author         = {Robert Bringhurst},
-    Publisher      = {Hartley \& Marks, Publishers},
-    Series         = {Version 2.5},
-	Title          = {The Elements of Typographic Style},
-	Year           = {2002},
-}
+
+
+@webpage{:hc,
+	Date-Added = {2011-01-13 13:33:08 +0100},
+	Date-Modified = {2011-01-13 13:33:08 +0100},
+	Lastchecked = {gioved{\`\i} 13 gennaio 2011},
+	Title = {Sellafield - Wikipedia},
+	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/Sellafield#Calder_Hall_nuclear_power_station}}
+
+@webpage{:tg,
+	Date-Added = {2011-01-13 13:31:57 +0100},
+	Date-Modified = {2011-01-13 13:31:57 +0100},
+	Lastchecked = {gioved{\`\i} 13 gennaio 2011},
+	Title = {Sellafield - Wikipedia},
+	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/Sellafield}}
+
+@webpage{:kl,
+	Date-Added = {2011-01-13 13:16:29 +0100},
+	Date-Modified = {2011-01-13 13:16:29 +0100},
+	Lastchecked = {gioved{\`\i} 13 gennaio 2011},
+	Title = {DOE - Office of Nuclear Energy},
+	Bdsk-Url-1 = {http://www.ne.doe.gov/geniv/neGenIV1.html}}
+
+@webpage{:oq,
+	Date-Added = {2011-01-13 13:14:11 +0100},
+	Date-Modified = {2011-01-13 13:14:11 +0100},
+	Lastchecked = {gioved{\`\i} 13 gennaio 2011},
+	Title = {http://www.hss.energy.gov/nuclearsafety/ns/techstds/standard/hdbk1019/h1019v2.pdf},
+	Bdsk-Url-1 = {http://www.hss.energy.gov/nuclearsafety/ns/techstds/standard/hdbk1019/h1019v2.pdf}}
+
+@webpage{:nx,
+	Date-Added = {2011-01-13 13:09:23 +0100},
+	Date-Modified = {2011-01-13 13:09:23 +0100},
+	Lastchecked = {gioved{\`\i} 13 gennaio 2011},
+	Title = {DOE - Office of Nuclear Energy},
+	Bdsk-Url-1 = {http://www.ne.doe.gov/}}
+
+@webpage{:cr,
+	Date-Added = {2011-01-13 12:51:22 +0100},
+	Date-Modified = {2011-01-13 12:51:22 +0100},
+	Lastchecked = {gioved{\`\i} 13 gennaio 2011},
+	Title = {Dresden Nuclear Power Plant - Wikipedia},
+	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/Dresden_Nuclear_Power_Plant}}
+
+@webpage{:dq,
+	Date-Added = {2011-01-13 12:51:18 +0100},
+	Date-Modified = {2011-01-13 12:51:18 +0100},
+	Lastchecked = {gioved{\`\i} 13 gennaio 2011},
+	Title = {Enrico Fermi Nuclear Generating Station - Wikipedia},
+	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/Fermi_1}}
+
+@webpage{:bh,
+	Date-Added = {2011-01-13 12:51:14 +0100},
+	Date-Modified = {2011-01-13 12:51:14 +0100},
+	Lastchecked = {gioved{\`\i} 13 gennaio 2011},
+	Title = {Magnox - Wikipedia},
+	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/Magnox}}
+
+@webpage{:qf,
+	Date-Added = {2011-01-13 12:51:10 +0100},
+	Date-Modified = {2011-01-13 12:51:10 +0100},
+	Lastchecked = {gioved{\`\i} 13 gennaio 2011},
+	Title = {Shippingport Atomic Power Station - Wikipedia},
+	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/Shippingport_Atomic_Power_Station}}
+
+@webpage{:ve,
+	Date-Added = {2011-01-13 12:49:57 +0100},
+	Date-Modified = {2011-01-13 12:49:57 +0100},
+	Lastchecked = {gioved{\`\i} 13 gennaio 2011},
+	Title = {Nuclear Reactors Knowledge Base},
+	Bdsk-Url-1 = {http://www.iaea.org/inisnkm/nkm/aws/reactors.html}}
+
+@book{jamasb2006future,
+	Author = {Jamasb, T. and Nuttall, W.J. and Pollitt, M.G.},
+	Date-Added = {2011-01-13 12:44:28 +0100},
+	Date-Modified = {2011-01-13 12:44:28 +0100},
+	Isbn = {0521860490},
+	Publisher = {Cambridge Univ Pr},
+	Title = {Future electricity technologies and systems},
+	Year = {2006}}
+
+@webpage{:ly,
+	Date-Added = {2011-01-13 12:35:50 +0100},
+	Date-Modified = {2011-01-13 12:35:50 +0100},
+	Lastchecked = {gioved{\`\i} 13 gennaio 2011},
+	Title = {Generation II reactor - Wikipedia},
+	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/Generation_I_reactor}}
+
+@webpage{:zr,
+	Date-Added = {2011-01-13 12:33:17 +0100},
+	Date-Modified = {2011-01-13 12:33:17 +0100},
+	Lastchecked = {gioved{\`\i} 13 gennaio 2011},
+	Title = {Nuclear reactor technology - Wikipedia},
+	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/Nuclear_reactor}}
+
+@webpage{:ys,
+	Date-Added = {2011-01-13 12:32:34 +0100},
+	Date-Modified = {2011-01-13 12:32:34 +0100},
+	Lastchecked = {gioved{\`\i} 13 gennaio 2011},
+	Title = {Nuclear fuel - Wikipedia},
+	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/Nuclear_fuel}}
+
+@webpage{:vn,
+	Date-Added = {2011-01-13 11:22:18 +0100},
+	Date-Modified = {2011-01-13 11:22:18 +0100},
+	Lastchecked = {gioved{\`\i} 13 gennaio 2011},
+	Title = {Popular Science - Google Books},
+	Bdsk-Url-1 = {http://books.google.it/books?id=0e0F0zivk0gC&lpg=PA68&dq=generation%20nuclear%20reactor%20history&hl=en&pg=PA70#v=onepage&q=generation%20nuclear%20reactor%20history&f=false}}
+
+@webpage{:kx,
+	Date-Added = {2011-01-12 13:46:14 +0100},
+	Date-Modified = {2011-01-12 13:46:33 +0100},
+	Lastchecked = {mercoled{\`\i} 12 gennaio 2011},
+	Title = {Three Mile Island accident - Wikipedia, the free encyclopedia},
+	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/Three_Mile_Island_accident}}
+
+@webpage{:fk,
+	Date-Added = {2011-01-12 13:43:05 +0100},
+	Date-Modified = {2011-01-12 13:43:05 +0100},
+	Lastchecked = {mercoled{\`\i} 12 gennaio 2011},
+	Title = {Universit{\`a} degli studi di Pavia - Home},
+	Bdsk-Url-1 = {http://www.unipv.eu/on-line/Home.html}}
+
+@book{bringhurst:2002,
+	Address = {Point Roberts, WA, USA},
+	Author = {Robert Bringhurst},
+	Publisher = {Hartley \& Marks, Publishers},
+	Series = {Version 2.5},
+	Title = {The Elements of Typographic Style},
+	Year = {2002}}
